--- a/part-02/frontend/editproduct.html
+++ b/part-02/frontend/editproduct.html
@@ -33,6 +33,6 @@
     </div>
 
     <script src="editproduct.js"></script>
-    <script src="validate.js"></script>
+    <!-- <script src="validate.js"></script> -->
   </body>
 </html>
