[Task] Upload chapter 12

--- a/part-04/frontend/game.html
+++ b/part-04/frontend/game.html
@@ -17,7 +17,10 @@
     <div class="root-container">
       <header class="container-fluid">
         <h1>Wasm Match</h1>
-        <h3 id="currentLevel">Level 1</h3>
+        <h3>
+          Level: <span id="levelNumber">1</span>
+          Tries: <span id="tries"></span>
+        </h3>
       </header>
 
       <div id="cardContainer" class="container-fluid"></div>
